--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.4.1
-Django==3.2.7
+Django==3.2.8
+djangorestframework==3.12.4
 pytz==2021.1
-sqlparse==0.4.2
+sqlparse==0.4.1
+typing-extensions==3.10.0.2
